--- a/templates/chat/home.html
+++ b/templates/chat/home.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
-{% block content %}
 {% load static %}
 
 {% block css %}
 <link rel="stylesheet" href="{% static 'css/chatus.css' %}">
 {% endblock %}
 
+{% block content %}
 <div class="d-flex h-100">
     <div class="chat-rooms h-100 w-25">
         <div class="rooms m-3">
@@ -14,10 +14,8 @@
                 <button class="btn btn-transparent mb-2"><i class="bi bi-plus-circle-fill text-primary"></i></button>
             </div>
 
-            <ul class="list-group shadow border-0">
-                {% for room in rooms %}
-                <l1 class="list-group-item">{{room.title}}</l1>
-                {% endfor %}
+            <ul class="list-rooms list-group shadow border-0">
+                {% include 'chat/list-rooms.html' %}
             </ul>
         </div>
     </div>
