--- a/templates/chat/list-rooms.html
+++ b/templates/chat/list-rooms.html
@@ -1,3 +1,3 @@
 {% for room in rooms %}
-<l1 class="list-group-item" onclick="getMessages('{{room.id}}')">{{room.title}}</l1>
+<li role="button" class="list-group-item" id="room-{{room.id}}" onclick="getMessages('{{room.id}}')">{{room.title}}</li>
 {% endfor %}
