--- a/templates/chat/home.html
+++ b/templates/chat/home.html
@@ -29,9 +29,6 @@
             </form>
         </div>
     </div>
+    <script type="text/javascript" defer src="../../static/js/chatus.js"></script>
 </div>
-{% endblock %}
-
-{% block js %}
-<script defer src="{% static 'js/chatus.js' %}"></script>
 {% endblock %}
