--- a/templates/chat/home.html
+++ b/templates/chat/home.html
@@ -31,4 +31,6 @@
     </div>
     <script type="text/javascript" defer src="../../static/js/chatus.js"></script>
 </div>
+{% include 'chat/modals/create-room.html' %}
+
 {% endblock %}
