--- a/templates/chat/home.html
+++ b/templates/chat/home.html
@@ -11,7 +11,8 @@
         <div class="rooms m-3">
             <div class="d-flex justify-content-between">
                 <h3>chat<span class="text-primary">us</span></h3>
-                <button class="btn btn-transparent mb-2"><i class="bi bi-plus-circle-fill text-primary"></i></button>
+                <button class="btn btn-transparent mb-2" data-bs-toggle="modal" data-bs-target="#staticBackdrop"
+                    type="button"><i class="bi bi-plus-circle-fill text-primary"></i></button>
             </div>
 
             <ul class="list-rooms list-group shadow border-0">
