--- a/static/css/chatus.css
+++ b/static/css/chatus.css
@@ -8,7 +8,37 @@ body {
     justify-content: space-between;
 }
 
+.list-group-item:hover {
+    background-color: rgb(48, 48, 48);
+}
+
 .btn-delete {
     background-color: transparent;
     border: none;
+}
+
+.btn-send {
+    background-color: transparent;
+    border-right: 1px solid;
+    border-top: 1px solid;
+    border-bottom: 1px solid;
+    border-left: none;
+    border-top-right-radius: 0.375rem;
+    border-bottom-right-radius: 0.375rem;
+}
+
+.btn-delete:hover::before {
+    color: #df2233
+}
+
+.input-send-message {
+    border-right: none;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+}
+
+.form-control:focus {
+    border-right: none;
+    outline-color: initial;
+    box-shadow: #3c4042 0px 0px 0px 0.10rem;
 }
