--- a/templates/chat/login.html
+++ b/templates/chat/login.html
@@ -7,23 +7,26 @@
 {% endblock %}
 
 <div class="enter-content">
+    <div class="transition"></div>
     <div class="d-flex justify-content-between">
         <h1 style="font-size: 60px;">chat<span class="text-primary">us</span></h1>
     </div>
     <form class="container-login">
         <div class="form-item">
             <label class="email" for="login-email">E-mail</label>
-            <input type="text" class="email" placeholder="Digite seu email" id="login-email">
+            <input type="email" class="email form-control" placeholder="Digite seu email" id="login-email">
         </div>
         <div class="form-item">
             <label class="password" for="login-password">Senha</label>
-            <input type="password" class="password" placeholder="Digite sua senha" id="login-password">
+            <input type="password" class="password form-control" placeholder="Digite sua senha" id="login-password">
         </div>
         <div class="login-container">
-            <button class="login-btn" id="login-btn" type="submit">Entrar</button>
+            <button class="login-btn btn btn-primary" id="login-btn" type="submit">Entrar</button>
             <span class="or">ou</span>
-            <button class="user-register" id="user-register">Registrar novo usuário</button>
+            <button class="user-register btn btn-secondary" id="user-register" onclick="redirectToRegister()">Registrar
+                novo usuário</button>
         </div>
     </form>
+    <script type="text/javascript" defer src="../../static/js/login.js"></script>
 </div>
 {% endblock %}
